# AuditOps

./: .gitignore  FULL_FUNCTIONALITY_CHECK.md  README.md
tool/: FASTSTART.md  README.md  Stucture.md  cluster-graph.json  phase6-frontend-handoff.md  plan.md  pyproject.toml  requirements.txt
tool/docs/: README.md  api-and-snapshots.md  architecture-and-algorithms.md  cli-modes-and-examples.md  quickstart-and-setup.md  schema-reference.md  testing-and-rubric.md
tool/src/: main.py
tool/src/analysis/: __init__.py  blast_radius.py  critical_node.py  cycle_detect.py  shortest_path.py
tool/src/api/: __init__.py  app.py
tool/src/api/routes/: graph_analysis.py
tool/src/core/: interfaces.py  models.py
tool/src/graph/: networkx_builder.py
tool/src/ingestion/: kubectl_runner.py  mock_parser.py
tool/src/k8s-yaml/: attack-path-demo.yaml  cluster-config.yaml  new-nvd-test.yaml  secure-cluster.yaml  test-cluster.yaml  ultimate-sink.yaml  vulnerable-cluster.yaml
tool/src/reporting/: __init__.py  cli_formatter.py  pdf_generator.py
tool/src/services/: __init__.py
tool/test/: test_attack_path_accuracy.py  test_blast_radius.py  test_cli_formatter.py  test_critical_node.py  test_cycle_detect.py  test_dijkstra_rubric_cases.py  test_graph_analysis_contract.py  test_kubectl_runner.py  test_main_cli_modes.py  test_main_export.py  test_mock_parser.py  test_networkx_builder.py  test_nvd_scorer.py  test_pdf_generator.py  test_sample_output_regression.py  test_shortest_path.py  test_temporal_snapshot_diff.py
tool/test/test_api/: test_graph_analysis_api.py
(+35 files in other folders)
