[build-system]
requires = ["setuptools>=69.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hack2future-cli"
version = "0.1.0"
description = "Kubernetes attack-path analysis CLI and API tooling"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
	"fastapi>=0.115.0",
	"httpx>=0.28.1",
	"networkx>=3.4.2",
	"pyyaml>=6.0.2",
	"uvicorn>=0.30.6",
]

[project.scripts]
hack2future = "main:main"
h2f = "main:main"

[tool.setuptools]
package-dir = {"" = "src"}
py-modules = ["main"]

[tool.setuptools.packages.find]
where = ["src"]
include = [
	"analysis*",
	"api*",
	"core*",
	"graph*",
	"ingestion*",
	"reporting*",
	"services*",
]
